# ocudu

./: .gitlab-ci.yml  AGENTS.md  CMakeLists.txt
.gitlab/: main.tf
.gitlab/ci/: build.yml  compose.yml  deploy.yml
.gitlab/ci-shared/: build.yml  docker.yml  static.yml
.gitlab/ci-shared/gitlab_settings/: .gitlab-ci.yml  schedules.tf  variables.tf
.gitlab/ci/builders/: version.yml
.gitlab/ci/buildkit-cli/: Dockerfile
.gitlab/ci/deploy/: .gitlab-ci.yml  image-build-rh.yml  image-build.yml  image-matrix.yml  promote-stable-preflight.yml
.gitlab/ci/docker/: .gitlab-ci.yml  image-build-rh.yml  image-build.yml  image-matrix.yml  promote-stable-preflight.yml
.gitlab/ci/rh-tool-cli/: .gitlab-ci.yml  Dockerfile
.gitlab/ci/static/: run-clang-format-diff.sh  version.yml
.gitlab/ci/ui/: .gitlab-ci.yml
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md
.reuse/: annotate-alt.txt
apps/: AGENTS.md  CMakeLists.txt
apps/cu/: cu.cpp
apps/cu_cp/: cu_cp.cpp
apps/cu_up/: cu_up.cpp  cu_up_appconfig_yaml_writer.cpp
apps/du/: du.cpp
apps/du_low/: du_low.cpp
apps/gnb/: gnb.cpp
apps/helpers/: CMakeLists.txt
apps/helpers/logger/: logger_appconfig.h  logger_appconfig_cli11_schema.cpp  logger_appconfig_yaml_writer.cpp
apps/helpers/ntn/: CMakeLists.txt  ntn_config_cli11_schema.cpp  ntn_config_cli11_schema.h  ntn_config_translators.cpp  ntn_config_translators.h  ntn_config_yaml_writer.cpp  ntn_config_yaml_writer.h  ntn_satellite_config.h
apps/services/: application_message_banners.h
apps/services/app_resource_usage/: app_resource_usage.cpp
apps/services/cmdline/: cmdline_command_dispatcher.cpp
apps/services/metrics/: periodic_metrics_report_controller.h
cmake/modules/: FindOpenSSLWithDTLS.cmake
configs/: cell_cfg_low_band_coverage_layer.yml  cell_cfg_mid_band_capacity_layer.yml  du_rf_b200_tdd_n78_20mhz.yml  geo_coordinates.yml  geo_ntn.yml  gnb_rf_b200_tdd_n78_20mhz.yml  qos.yml  srb.yml
docker/: Dockerfile  docker-compose.yml
docker/grafana/: Dockerfile  version.yml
docker/scripts/: build_rohc.sh  common.sh  install_dependencies.sh  install_docker_dependencies.sh  install_dpdk_dependencies.sh  install_rohc_dependencies.sh  install_uhd_dependencies.sh
lib/: CMakeLists.txt
lib/cu_cp/: CMakeLists.txt  cu_configurator_impl.h  cu_cp_impl.cpp  cu_cp_impl.h  cu_cp_impl_interface.h  log_format.h  mobility_manager_cu_cp_notifier.h  ngap_repository.cpp  ngap_repository.h  xnap_repository.cpp  xnap_repository.h
lib/cu_up/: cu_up_impl.cpp  cu_up_impl.h  cu_up_manager_impl.cpp  cu_up_manager_impl.h  ue_context.h  ue_manager.cpp  ue_manager.h
lib/du/: du_cell_config_validation.cpp  du_update_config_helpers.cpp
lib/e2/: CMakeLists.txt
lib/f1ap/: asn1_helpers.cpp
lib/fapi_adaptor/: precoding_matrix_mapper.cpp  precoding_matrix_table_generator.cpp  uci_part2_mapper_functions.h
lib/gateways/: CMakeLists.txt  sctp_dtls.cpp  sctp_dtls.h  sctp_network_server_impl.cpp  sctp_network_server_impl.h
lib/gtpu/: gtpu_demux_factory.cpp  gtpu_demux_impl.cpp  gtpu_demux_impl.h  gtpu_tunnel_ngu_rx_impl.h
lib/lpp/: CMakeLists.txt  reference_location.cpp
lib/mac/: README.md  mac_impl.cpp  procedures.md  rnti_manager.h  rnti_value_table.h
lib/ngap/: ngap_asn1_converters.h  ngap_asn1_helpers.h  ngap_impl.cpp  ngap_impl.h
lib/nrppa/: nrppa_asn1_converters.h  nrppa_asn1_helpers.h  nrppa_factory.cpp  nrppa_helper.h  nrppa_impl.cpp  nrppa_impl.h
lib/ntn/: CMakeLists.txt  ntn_assistance_info_generator.cpp  ntn_assistance_info_generator.h  ntn_configuration_manager_impl.cpp  ntn_configuration_manager_impl.h  ntn_log_helpers.h  ntn_orbital_compute_module.cpp  ntn_orbital_compute_module.h  ntn_sat_switch_helpers.cpp  ntn_sat_switch_helpers.h  ntn_sib19_helpers.cpp  ntn_sib19_helpers.h
lib/ocuduvec/: bit.cpp  sc_prod.cpp
lib/pdcp/: pdcp_entity_rx.cpp  pdcp_entity_rx.h  pdcp_entity_tx.cpp  pdcp_entity_tx.h
lib/radio/: CMakeLists.txt  radio_factory.cpp
lib/radio/realtime_dummy/: CMakeLists.txt  radio_config_realtime_dummy_validator.cpp  radio_config_realtime_dummy_validator.h  radio_factory_realtime_dummy_impl.cpp  radio_factory_realtime_dummy_impl.h  radio_session_realtime_dummy_impl.cpp  radio_session_realtime_dummy_impl.h
lib/ran/: CMakeLists.txt  band_helper.cpp
lib/rlc/: CMakeLists.txt  rlc_am_entity.h  rlc_factory.cpp  rlc_rx_am_entity.cpp  rlc_rx_am_entity.h  rlc_rx_entity.h  rlc_rx_tm_entity.cpp  rlc_rx_um_entity.cpp  rlc_rx_um_entity.h  rlc_sdu_queue_lockfree.h  rlc_tx_am_entity.cpp  rlc_tx_am_entity.h  rlc_tx_entity.h  rlc_um_entity.h  rlc_window_seg_pool_factory.cpp  rlc_window_seg_pools.cpp  rlc_window_seg_pools.h
lib/rrc/: CMakeLists.txt  rrc_du_impl.cpp  rrc_du_impl.h
lib/scheduler/: CMakeLists.txt  README.md  cell_scheduler.cpp  cell_scheduler.h  log_reference.md  scheduler_impl.cpp  scheduler_impl.h
lib/scheduler/rrm/: CMakeLists.txt  pucch_resource_manager.cpp  srs_resource_generator.cpp  srs_resource_generator.h  srs_resource_manager_aperiodic.cpp  srs_resource_manager_aperiodic.h  srs_resource_manager_factory.cpp  srs_resource_manager_helpers.cpp  srs_resource_manager_helpers.h  srs_resource_manager_periodic.cpp  srs_resource_manager_periodic.h
lib/security/: integrity_engine_generic.cpp  integrity_engine_generic.h  integrity_engine_nia2_cmac.cpp  integrity_engine_nia2_cmac.h  integrity_engine_nia2_non_cmac.cpp  integrity_engine_nia2_non_cmac.h  security_engine_impl.cpp  security_engine_impl.h
lib/support/: CMakeLists.txt  timers.cpp
lib/xnap/: xnap_asn1_converters.h  xnap_context.h  xnap_impl.cpp
tests/unittests/fapi/: CMakeLists.txt  fapi_power_unit_test.cpp
tests/unittests/fapi/p7/builders/: ul_pusch_pdu_test.cpp
tests/unittests/radio/sidekiq/: CMakeLists.txt  convert_i12_to_ci16_test.cpp
tests/unittests/scheduler/rrm/: CMakeLists.txt  pucch_resource_manager_test.cpp  srs_resource_generator_test.cpp  srs_resource_manager_aperiodic_test.cpp  srs_resource_manager_periodic_test.cpp
tests/unittests/support/rate_limiting/: CMakeLists.txt  lockfree_token_bucket_test.cpp
(+1024 files in other folders)
